--- a/codepad/codepad.vcxproj
+++ b/codepad/codepad.vcxproj
@@ -287,6 +287,8 @@
     <ClInclude Include="os\opengl_renderer_base.h" />
     <ClInclude Include="os\software_renderer_base.h" />
     <ClInclude Include="ui\element_classes.h" />
+    <ClInclude Include="ui\arrangements.h" />
+    <ClInclude Include="ui\misc.h" />
     <ClInclude Include="ui\native_commands.h" />
     <ClInclude Include="os\current.h" />
     <ClInclude Include="os\current\all.h" />
@@ -337,6 +339,7 @@
     <ClCompile Include="ui\manager.cpp" />
     <ClCompile Include="ui\native_commands.cpp" />
     <ClCompile Include="ui\panel.cpp" />
+    <ClCompile Include="ui\arrangements.cpp" />
     <ClCompile Include="ui\visual.cpp" />
     <ClCompile Include="core\globals.cpp" />
   </ItemGroup>
