--- a/codepad/codepad.vcxproj.filters
+++ b/codepad/codepad.vcxproj.filters
@@ -72,9 +72,6 @@
     <ClInclude Include="os\misc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="editors\code\buffer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="os\filesystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -135,19 +132,10 @@
     <ClInclude Include="os\opengl_renderer_base.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="editors\code\document.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="editors\code\document_manager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="editors\code\rendering.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="editors\tabs.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="editors\code\buffer_formatting.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="editors\code\document_formatting_cache.h">
@@ -157,6 +145,24 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ui\arrangements.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="editors\buffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="editors\code\interpretation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="editors\code\linebreak_registry.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="editors\code\theme.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="editors\buffer_manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="editors\code\caret_set.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -203,9 +209,6 @@
     <ClCompile Include="os\software_renderer_base.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="editors\code\document.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="editors\tabs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -216,6 +219,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ui\arrangements.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="editors\code\caret_set.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
