buffer & interpretation is seemingly bug-free; added buffer test utility

--- a/codepad/codepad.vcxproj.filters
+++ b/codepad/codepad.vcxproj.filters
@@ -224,5 +224,8 @@
     <ClCompile Include="editors\code\caret_set.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="editors\buffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
