--- a/codepad/codepad.vcxproj.filters
+++ b/codepad/codepad.vcxproj.filters
@@ -105,9 +105,6 @@
     <ClInclude Include="core\misc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="core\tasks.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="ui\common_elements.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -184,6 +181,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ui\atlas.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ui\scheduler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
